# parshift

./: .gitignore  404.html  CITATION.cff  LICENSE  README.md  _config.yml  index.html  info.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  cov.yml  docs.yml  tests.yml
Docs/: index.md
api/: annotation.html  conditional_probabilities.html  plotting.html
api/annotation/: index.html
api/conditional_probabilities/: index.html
api/plotting/: index.html
dev/: index.html
docs/: index.md  info.md  mkdocs.yml
docs/api/: annotation.md  conditional_probabilities.md  plotting.md
docs/docs/: dev.md  index.md  reference.md
docs/docs/api/: annotation.md  conditional_probabilities.md  plotting.md
parshift/: Parshift.py  __init__.py  annotation.py  cond_probabilities.py  conditional_probabilities.py  load_and_process.py  oo_parshift.py  plotting.py  statistics.py  teste.ipynb
py-participation-shifts/: annotation.py  cond_probabilities.py  teste.ipynb
reference/: index.html
search/: search_index.json
test/: a.csv  test_annotation.py
tests/: __init__.py  a.csv  b.csv  conftest.py  df.csv  test_Parshift.py  test_annotation.py  test_conditional_probabilities.py  test_load_and_process.py  test_oo_parshift.py  test_plotting.py  test_statistics.py  teste.ipynb
tests/data/: conv_good.csv  conv_good_diffsep.csv  conv_good_target_id.csv  conv_missing_id.csv  conv_missing_target_and_reply.csv  conv_no_id_but_target_and_reply.csv  df_good.csv  df_good_target_id.csv  df_result.csv
