[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parshift"]
#py-modules = []

[project]
name = "parshift"
version = "0.1.2"
description = ""
readme = "README.md"
requires-python = ">=3.8"
keywords = ["participation shifts", "conversational analysis"]
license = {text = "MIT"}
authors = [ { name = "Bruno Saraiva", email = "bruno.saraiva@ulusofona.pt" } ]
dependencies = ["pandas", "matplotlib", "squarify"] # Not really required

[project.urls]
"Homepage" = "https://github.com/bdfsaraiva/parshift"
"Bug Tracker" = "https://github.com/bdfsaraiva/parshift/issues"

[project.optional-dependencies]
dev = [
    "mkdocs>=1.2.2",
    "mkdocs-material>=7.1.11",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pandas>=1.5.2",
    "matplotlib>=3.6.2"
]


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
