[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["parshift"]
#py-modules = []

[project]
name = "parshift"
version = "0.2.0"
description = "Python package based on Gibson's framework (2003) for turn-taking in group conversation analysis."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["python", "conversation-analysis", "participation-shifts", "turn-taking"]
license = {text = "MIT"}
authors = [ 
{name = "Bruno Saraiva", email = "bruno.saraiva@ulusofona.pt"},
{name = "João Pedro Carvalho", email = "joao.matos.carvalho@ulusofona.pt" },
{name = "Nuno Fachada", email = "nuno.fachada@ulusofona.pt" },
{name = "Manuel Pita", email = "manuel.pita@ulusofona.pt" }
]
dependencies = ["pandas", "matplotlib", "squarify", "seaborn"] 
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    'Topic :: Scientific/Engineering'
]


[project.urls]
"Homepage" = "https://github.com/bdfsaraiva/parshift"
"Bug Tracker" = "https://github.com/bdfsaraiva/parshift/issues"

[project.optional-dependencies]
dev = [
    "mkdocs>=1.2.2",
    "mkdocs-material>=7.1.11",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "mkdocstrings[python]>=0.19.0",
    "black",
]


[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
